--- a/css/estilos.css
+++ b/css/estilos.css
@@ -31,28 +31,23 @@ header {
 header .container {
   position: relative; }
 
-.menu-opcoes {
+.menu-principal {
   position: absolute;
   right: 0;
   top: -.5em;
   font-size: 1.2em;
   font-weight: lighter; }
+  .menu-principal ul {
+    padding-left: 0; }
+  .menu-principal li {
+    display: inline-block;
+    width: 5em; }
+  .menu-principal a {
+    color: white;
+    text-decoration: none; }
+    .menu-principal a:hover {
+      text-decoration: underline; }
 
-.menu-opcoes ul {
-  padding-left: 0; }
-
-.menu-opcoes li {
-  display: inline-block;
-  width: 5em; }
-
-.menu-opcoes a {
-  color: white;
-  text-decoration: none; }
-
-.menu-opcoes a:hover {
-  text-decoration: underline; }
-
-/** Destaque **/
 .destaque {
   background: url(../imagens/destaque.jpg) center bottom repeat-x;
   -webkit-background-size: cover;
@@ -79,12 +74,12 @@ header .container {
   border: 0;
   padding: .6em;
   font-size: 1.2em;
-  -webkit-border-radius: 0.3em;
-  border-radius: 0.3em;
+  -webkit-border-radius: 50px;
+  -ms-border-radius: 50px;
+  border-radius: 50px;
   box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
   font-weight: bold; }
 
-/** Sobre **/
 .sobre {
   background: #ebebeb; }
 
@@ -183,6 +178,7 @@ header .container {
   height: 38px;
   font-size: 1.2em;
   -webkit-border-radius: 0.3em;
+  -ms-border-radius: 0.3em;
   border-radius: 0.3em;
   box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
   margin-left: 2em; }
@@ -198,7 +194,6 @@ header .container {
 .icone-x {
   background-position: -33px -5px; }
 
-/** Blog **/
 .blog {
   display: block;
   position: relative; }
@@ -253,6 +248,7 @@ textarea {
   margin-bottom: .8em;
   padding: 4px 8px;
   -webkit-border-radius: 0.3em;
+  -ms-border-radius: 0.3em;
   border-radius: 0.3em;
   border: 2px solid #ccc; }
 
@@ -265,6 +261,7 @@ textarea {
   height: 38px;
   font-size: 1.2em;
   -webkit-border-radius: 0.3em;
+  -ms-border-radius: 0.3em;
   border-radius: 0.3em;
   box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3); }
 
