--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -1,6 +1,6 @@
 /** Header **/
 header {
-  border-top: 5px solid green;
+  border-top: 5px solid #c24e4b;
   background: rgba(30, 44, 53, 0.8);
   height: 90px;
   width: 100%;
