--- a/scss/layout/destaque.scss
+++ b/scss/layout/destaque.scss
@@ -1,5 +1,6 @@
 @import '../helpers/variables';
 @import '../helpers/mixins';
+@import '../helpers/placeholders';
 
 .destaque {
   background: url(../imagens/destaque.jpg) center bottom repeat-x;
@@ -32,6 +33,6 @@
   padding: .6em;
   font-size: 1.2em;
   @include arredonda(50px);
-  box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+  @extend %sombra-padrao;
   font-weight: bold;
 }
