--- a/css/layout/contato.css
+++ b/css/layout/contato.css
@@ -1,3 +1,7 @@
+.contato button {
+  -webkit-box-shadow: 0.2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+  box-shadow: 0.2px 6.65px 0.35px rgba(0, 0, 0, 0.3); }
+
 /** Contato **/
 .contato input,
 .contato button {
@@ -19,7 +23,7 @@ textarea {
 
 .contato button {
   margin: 0 auto;
-  background: green;
+  background: #c24e4b;
   border: 0;
   color: #fff;
   width: 210px;
@@ -27,5 +31,4 @@ textarea {
   font-size: 1.2em;
   -webkit-border-radius: 0.3em;
   -ms-border-radius: 0.3em;
-  border-radius: 0.3em;
-  box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3); }
+  border-radius: 0.3em; }
