--- a/css/layout/planos.css
+++ b/css/layout/planos.css
@@ -1,3 +1,7 @@
+.plano button {
+  -webkit-box-shadow: 0.2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+  box-shadow: 0.2px 6.65px 0.35px rgba(0, 0, 0, 0.3); }
+
 /** Planos **/
 .planos {
   background: #1e2c35; }
@@ -18,7 +22,7 @@
 .plano h3 {
   color: #fff;
   font-size: 1.8em;
-  background: green;
+  background: #c24e4b;
   text-align: center;
   height: 2em;
   padding-top: .6em;
@@ -26,7 +30,7 @@
 
 .plano div {
   text-align: center;
-  color: green;
+  color: #c24e4b;
   font-size: 2.75em; }
 
 .itens-plano {
@@ -46,7 +50,7 @@
   float: right; }
 
 .plano button {
-  background: green;
+  background: #c24e4b;
   border: 0;
   color: #fff;
   width: 210px;
@@ -55,7 +59,6 @@
   -webkit-border-radius: 0.3em;
   -ms-border-radius: 0.3em;
   border-radius: 0.3em;
-  box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
   margin-left: 2em; }
 
 .icone-check, .icone-x {
