--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,3 +1,4 @@
+@import 'base/normalize';
 @import 'layout/geral';
 @import 'layout/header';
 @import 'layout/destaque';
@@ -6,3 +7,4 @@
 @import 'layout/blog';
 @import 'layout/contato';
 @import 'layout/footer';
+@import 'layout/media-queries';
