--- a/scss/layout/planos.scss
+++ b/scss/layout/planos.scss
@@ -1,5 +1,6 @@
 @import '../helpers/variables';
 @import '../helpers/mixins';
+@import '../helpers/placeholders';
 
 /** Planos **/
 .planos {
@@ -66,7 +67,7 @@
   height: 38px;
   font-size: 1.2em;
   @include arredonda;
-  box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+  @extend %sombra-padrao;
   margin-left: 2em;
 }
 
