--- a/scss/helpers/variables.scss
+++ b/scss/helpers/variables.scss
@@ -1,3 +1,4 @@
-$cor-padrao: #c24e4b;
-$cor-auxiliar: green;
+$cor-padrao: lighten(#c24e4b,0);
+$cor-auxiliar: darken(green,0);
 $cor-branca: #fff;
+$ponto-de-quebra: 980px;
