--- a/css/estilos.css
+++ b/css/estilos.css
@@ -396,6 +396,9 @@ header {
 
 header .container {
   position: relative; }
+  @media (max-width: 980px) {
+    header .container .container {
+      position: static; } }
 
 .menu-principal {
   position: absolute;
