--- a/scss/layout/header.scss
+++ b/scss/layout/header.scss
@@ -13,6 +13,13 @@ header {
 
 header .container {
   position: relative;
+  
+    @media (max-width: $ponto-de-quebra) {
+       .container{
+		   position: static;
+	     }
+    }
+
 }
 
 .menu-principal {
